Remove encfs and call directory data instead of decrypted

--- a/roles/mailserver/templates/usr_share_z-push_config.php.j2
+++ b/roles/mailserver/templates/usr_share_z-push_config.php.j2
@@ -63,7 +63,7 @@
 /**********************************************************************************
  *  Default FileStateMachine settings
  */
-    define('STATE_DIR', '/decrypted/zpush-state/');
+    define('STATE_DIR', '/data/zpush-state/');
 
 
 /**********************************************************************************
