--- a/roles/xmpp/templates/prosody.cfg.lua.j2
+++ b/roles/xmpp/templates/prosody.cfg.lua.j2
@@ -146,7 +146,7 @@ log = {
 	"*syslog";
 }
 
-data_path = "/decrypted/prosody"
+data_path = "/data/prosody"
 
 ----------- Virtual hosts -----------
 -- You need to add a VirtualHost entry for each domain you wish Prosody to serve.
