don't keep extra var for organization thats not really needed.

--- a/roles/mailserver/templates/etc_rspamd_local.d_dmarc.conf.j2
+++ b/roles/mailserver/templates/etc_rspamd_local.d_dmarc.conf.j2
@@ -15,7 +15,7 @@ send_reports = true;
 report_settings {
   # The following elements MUST be present
   # organisation name to use for reports
-  org_name = "{{ organization }}";
+  org_name = "xythobuzSovereign";
   
   # organisation domain
   domain = "{{ domain }}";
