Apache now configurable for multiple virtual domains.

--- a/roles/blog/templates/etc_apache2_sites-available_blog.j2
+++ b/roles/blog/templates/etc_apache2_sites-available_blog.j2
@@ -1,19 +1,17 @@
 <VirtualHost *:80>
-    ServerName {{ domain }}
-    ServerAlias www.{{ domain }}
+    ServerName {{ item.name }}
+    ServerAlias www.{{ item.name }}
 
-    Redirect permanent / https://{{ domain }}/
+    Redirect permanent / https://{{ item.name }}/
 </VirtualHost>
 
-
 <VirtualHost *:443>
-    ServerName {{ domain }}
-    ServerAlias www.{{ domain }}
-    SSLEngine On
+    ServerName {{ item.name }}
+    ServerAlias www.{{ item.name }}
 
-    DocumentRoot            "/var/www/{{ domain }}"
+    SSLEngine               On
+    DocumentRoot            "{{ item.doc_root }}"
     DirectoryIndex          index.html
     Options                 -Indexes
-
     HostnameLookups         Off
 </VirtualHost>
