--- a/roles/monitoring/templates/etc_monit_monitrc.j2
+++ b/roles/monitoring/templates/etc_monit_monitrc.j2
@@ -103,6 +103,21 @@ set mailserver localhost
 #
 # set mail-format { from: monit@foo.bar }
 #
+
+set mail-format {
+     from: monit@{{ domain }}
+  subject: monit alert --  $EVENT $SERVICE
+  message: $EVENT Service $SERVICE
+
+    Date:        $DATE
+    Action:      $ACTION
+    Host:        $HOST
+    Description: $DESCRIPTION
+
+Your faithful employee,
+Monit from Sovereign
+}
+
 #
 ## You can set alert recipients whom will receive alerts if/when a
 ## service defined in this file has errors. Alerts may be restricted on
@@ -112,15 +127,20 @@ set mailserver localhost
 # set alert manager@foo.bar only on { timeout }  # receive just service-
 #                                                # timeout alert
 #
+
+set alert {{ admin_email }}
+
 #
 ## Monit has an embedded web server which can be used to view status of
 ## services monitored and manage services from a web interface. See the
 ## Monit Wiki if you want to enable SSL for the web server.
 #
+
 set httpd port 2812 and
     use address localhost  # only accept connection from localhost
     allow localhost        # allow localhost to connect to the server and
     allow admin:monit      # require user 'admin' with password 'monit'
+
 #    allow @monit           # allow users of group 'monit' to connect (rw)
 #    allow @users readonly  # allow users of group 'users' to connect readonly
 #
