--- a/roles/common/templates/etc_fail2ban_jail.local.j2
+++ b/roles/common/templates/etc_fail2ban_jail.local.j2
@@ -62,3 +62,13 @@ logpath = /var/log/mail.log
 maxretry = 20
 findtime = 1200
 bantime = 1200
+
+[gitea]
+enabled = true
+port = http,https
+filter = gitea
+logpath = /data/gitea/log/gitea.log
+maxretry = 10
+findtime = 3600
+bantime = 900
+action = iptables-allports
