--- a/roles/monitoring/templates/etc_monit_monitrc.j2
+++ b/roles/monitoring/templates/etc_monit_monitrc.j2
@@ -139,7 +139,7 @@ set alert {{ admin_email }}
 set httpd port 2812 and
     use address localhost  # only accept connection from localhost
     allow localhost        # allow localhost to connect to the server and
-    allow admin:monit      # require user 'admin' with password 'monit'
+    allow {{ monit_admin_username }}:{{ monit_admin_password }}
 
 #    allow @monit           # allow users of group 'monit' to connect (rw)
 #    allow @users readonly  # allow users of group 'users' to connect readonly
