Fix a bunch of broken http->https redirects and make them always temporary

--- a/roles/blog/templates/etc_apache2_sites-available_blog.j2
+++ b/roles/blog/templates/etc_apache2_sites-available_blog.j2
@@ -2,7 +2,7 @@
     ServerName {{ item.name }}
     ServerAlias www.{{ item.name }}
 
-    Redirect permanent / https://{{ item.name }}/
+    Redirect temp / https://www.{{ item.name }}/
 </VirtualHost>
 
 <VirtualHost *:443>
