--- a/roles/news/templates/etc_apache2_sites-available_selfoss.j2
+++ b/roles/news/templates/etc_apache2_sites-available_selfoss.j2
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
     ServerName {{ selfoss_subdomain }}.{{ item.name }}
 
-    Redirect permanent / https://{{ selfoss_subdomain }}.{{ item.name }}/
+    Redirect temp / https://{{ selfoss_subdomain }}.{{ item.name }}/
 </VirtualHost>
 
 <VirtualHost *:443>
