--- a/roles/matrix/templates/etc_apache2_sites-available_matrix.j2
+++ b/roles/matrix/templates/etc_apache2_sites-available_matrix.j2
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
     ServerName {{ matrix_subdomain }}.{{ item.name }}
 
-    Redirect permanent / https://{{ item.name }}/
+    Redirect temp / https://{{ matrix_subdomain }}.{{ item.name }}/
 </VirtualHost>
 
 <VirtualHost *:443>
