--- a/roles/nextcloud/templates/etc_apache2_sites-available_nextcloud.j2
+++ b/roles/nextcloud/templates/etc_apache2_sites-available_nextcloud.j2
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
     ServerName {{ nextcloud_subdomain }}.{{ item.name }}
 
-    Redirect permanent / https://{{ nextcloud_subdomain }}.{{ item.name }}/
+    Redirect temp / https://{{ nextcloud_subdomain }}.{{ item.name }}/
 </VirtualHost>
 
 <VirtualHost *:443>
