Tweak fathom task

--- a/roles/blog/templates/etc_systemd_system_fathom-stats.j2
+++ b/roles/blog/templates/etc_systemd_system_fathom-stats.j2
@@ -1,5 +1,5 @@
 [Unit]
-Description=Starts the fathom server
+Description=fathom webtracking server
 Requires=network.target
 After=network.target
 
