--- a/roles/matrix/templates/root_riot_config.j2
+++ b/roles/matrix/templates/root_riot_config.j2
@@ -1,5 +1,5 @@
 {
-    "default_hs_url": "https://{{ matrix_domain }}",
+    "default_hs_url": "https://{{ domain }}",
     "default_is_url": "https://matrix.org",
     "disable_custom_urls": false,
     "disable_guests": false,
