--- a/roles/matrix/templates/etc_matrix-synapse_conf.d_server_name.j2
+++ b/roles/matrix/templates/etc_matrix-synapse_conf.d_server_name.j2
@@ -6,4 +6,4 @@
 # e.g. matrix.org, localhost:8080, etc.
 # This is also the last part of your UserID.
 #
-server_name: "{{ matrix_domain }}"
+server_name: "{{ domain }}"
