Run matrix federation also over apache to get proper TLS. For some reason not working with tls from synapse itself.

--- a/roles/matrix/templates/etc_matrix-synapse_homeserver.j2
+++ b/roles/matrix/templates/etc_matrix-synapse_homeserver.j2
@@ -155,14 +155,14 @@ listeners:
   # will also need to give Synapse a TLS key and certificate: see the TLS section
   # below.)
   #
-  - port: 8448
-    type: http
-    tls: true
-    bind_addresses:
-      - '::'
-    
-    resources:
-      - names: [client, federation, webclient]
+  #- port: 8448
+  #  type: http
+  #  tls: true
+  #  bind_addresses:
+  #    - '::'
+  #
+  #  resources:
+  #    - names: [client, federation, webclient]
 
   # Unsecure HTTP listener: for when matrix traffic passes through a reverse proxy
   # that unwraps TLS.
