--- a/roles/mailserver/templates/etc_apache2_sites-available_autoconfig.j2
+++ b/roles/mailserver/templates/etc_apache2_sites-available_autoconfig.j2
@@ -11,4 +11,7 @@
     DocumentRoot            "/var/www/autoconfig"
     Options                 -Indexes
     HostnameLookups         Off
+    LogLevel                warn
+    ErrorLog                /var/log/apache2/autoconfig.info-error_log
+    CustomLog               /var/log/apache2/autoconfig.info-access_log common
 </VirtualHost>
