--- a/roles/gitea/templates/etc_apache2_sites-available_gitea.j2
+++ b/roles/gitea/templates/etc_apache2_sites-available_gitea.j2
@@ -12,6 +12,9 @@
     DirectoryIndex          index.html
     Options                 -Indexes
     HostnameLookups         Off
+    LogLevel                warn
+    ErrorLog                /var/log/apache2/gitea.info-error_log
+    CustomLog               /var/log/apache2/gitea.info-access_log common
 
     ProxyRequests           Off
     ProxyPreserveHost       On
