--- a/roles/news/templates/etc_apache2_sites-available_selfoss.j2
+++ b/roles/news/templates/etc_apache2_sites-available_selfoss.j2
@@ -10,6 +10,7 @@
     SSLEngine               On
     DocumentRoot            /var/www/selfoss
     Options                 -Indexes
+    LogLevel                warn
     ErrorLog                /var/log/apache2/selfoss.info-error_log
     CustomLog               /var/log/apache2/selfoss.info-access_log common
 
