--- a/roles/nextcloud/templates/etc_apache2_sites-available_nextcloud.j2
+++ b/roles/nextcloud/templates/etc_apache2_sites-available_nextcloud.j2
@@ -10,6 +10,7 @@
     SSLEngine               On
     DocumentRoot            /var/www/nextcloud
     Options                 -Indexes
+    LogLevel                warn
     ErrorLog                /var/log/apache2/nextcloud.info-error_log
     CustomLog               /var/log/apache2/nextcloud.info-access_log common
 
