--- a/roles/blog/templates/etc_apache2_sites-available_blog.j2
+++ b/roles/blog/templates/etc_apache2_sites-available_blog.j2
@@ -14,4 +14,5 @@
     DirectoryIndex          index.html
     Options                 -Indexes
     HostnameLookups         Off
+    php_admin_flag          engine On
 </VirtualHost>
