Also redirect normal web access to www domain.

--- a/roles/blog/templates/etc_apache2_sites-available_blog.j2
+++ b/roles/blog/templates/etc_apache2_sites-available_blog.j2
@@ -7,6 +7,11 @@
 
 <VirtualHost *:443>
     ServerName {{ item.name }}
+
+    Redirect temp / https://www.{{ item.name }}/
+</VirtualHost>
+
+<VirtualHost *:443>
     ServerAlias www.{{ item.name }}
 
     SSLEngine               On
