Tweak Roundcube site title

--- a/roles/webmail/templates/etc_roundcube_config.inc.j2
+++ b/roles/webmail/templates/etc_roundcube_config.inc.j2
@@ -63,7 +63,7 @@ $config['smtp_pass'] = '%p';
 $config['support_url'] = 'https://www.{{ domain }}';
 
 // Name your service. This is displayed on the login screen and in the window title
-$config['product_name'] = '{{ domain }} Webmail';
+$config['product_name'] = 'Webmail {{ domain }}';
 
 // this key is used to encrypt the users imap password which is stored
 // in the session record (and the client cookie if remember password is enabled).
