Rename fathom subdomain to stats and make it a variable.

--- a/roles/blog/templates/var_www_blog_index.j2
+++ b/roles/blog/templates/var_www_blog_index.j2
@@ -22,7 +22,7 @@
 	m=f.getElementsByTagName('script')[0];
 	o.async=1; o.src=t; o.id='fathom-script';
 	m.parentNode.insertBefore(o,m)
-})(document, window, '//fathom.{{ domain }}/tracker.js', 'fathom');
+})(document, window, '//{{ fathom_subdomain }}.{{ domain }}/tracker.js', 'fathom');
 fathom('set', 'siteId', 'JTPIK');
 fathom('trackPageview');
 		</script>
