--- a/roles/blog/templates/etc_apache2_sites-available_fathom.j2
+++ b/roles/blog/templates/etc_apache2_sites-available_fathom.j2
@@ -1,11 +1,11 @@
 <VirtualHost *:80>
-    ServerName fathom.{{ item.name }}
+    ServerName {{ fathom_subdomain }}.{{ item.name }}
 
-    Redirect temp / https://fathom.{{ item.name }}/
+    Redirect temp / https://{{ fathom_subdomain }}.{{ item.name }}/
 </VirtualHost>
 
 <VirtualHost *:443>
-    ServerName fathom.{{ item.name }}
+    ServerName {{ fathom_subdomain }}.{{ item.name }}
 
     SSLEngine               On
     DocumentRoot            "{{ item.doc_root }}"
