--- a/roles/mailserver/templates/etc_dovecot_dovecot-sql.conf.ext.j2
+++ b/roles/mailserver/templates/etc_dovecot_dovecot-sql.conf.ext.j2
@@ -103,7 +103,7 @@ default_pass_scheme = SHA512-CRYPT
 #  SELECT username, domain, password \
 #  FROM users WHERE username = '%n' AND domain = '%d'
 
-password_query = SELECT email AS user, password FROM virtual_users WHERE email = '%u';
+password_query = SELECT username AS user, domain, password FROM virtual_users WHERE username = '%n' AND domain = '%d' and sendonly = false;
 
 # userdb query to retrieve the user information. It can return fields:
 #   uid - System UID (overrides mail_uid setting)
@@ -136,3 +136,5 @@ password_query = SELECT email AS user, password FROM virtual_users WHERE email =
 
 # Query to get a list of all usernames.
 #iterate_query = SELECT username AS user FROM users
+
+iterate_query = SELECT username, domain FROM virtual_users WHERE sendonly = false;
