--- a/roles/mailserver/templates/etc_postfix_pgsql-virtual-mailbox-maps.cf.j2
+++ b/roles/mailserver/templates/etc_postfix_pgsql-virtual-mailbox-maps.cf.j2
@@ -2,4 +2,4 @@ user = {{ mail_db_username }}
 password = {{ mail_db_password }}
 hosts = 127.0.0.1
 dbname = {{ mail_db_database }}
-query = SELECT 1 FROM virtual_users WHERE email='%s'
+query = SELECT 1 FROM virtual_users WHERE username = '%u' and domain = '%d'
