Disable account registration for gitea and commento

--- a/roles/blog/templates/etc_systemd_system_commento.j2
+++ b/roles/blog/templates/etc_systemd_system_commento.j2
@@ -19,6 +19,7 @@ Environment=COMMENTO_SMTP_PORT=25
 Environment=COMMENTO_SMTP_USERNAME=example@gmail.com
 Environment=COMMENTO_SMTP_PASSWORD=hunter2
 Environment=COMMENTO_SMTP_FROM_ADDRESS=no-reply@{{ commento_subdomain }}.{{ domain }}
+Environment=COMMENTO_FORBID_NEW_OWNERS=true
 
 [Install]
 WantedBy=multi-user.target
