--- a/roles/gitea/templates/etc_gitea_app_ini.j2
+++ b/roles/gitea/templates/etc_gitea_app_ini.j2
@@ -24,6 +24,10 @@ USER = {{ gitea_db_username }}
 PASSWD = `{{ gitea_db_password }}`
 SSL_MODE = disable
 
+[service]
+DISABLE_REGISTRATION = true
+ENABLE_NOTIFY_MAIL = true
+
 [security]
 INSTALL_LOCK = true
 SECRET_KEY = {{ gitea_secret }}
