--- a/roles/mailserver/templates/usr_share_z-push_backend_combined_config.php.j2
+++ b/roles/mailserver/templates/usr_share_z-push_backend_combined_config.php.j2
@@ -47,12 +47,12 @@ class BackendCombinedConfig {
                 'i' => array(
                     'name' => 'BackendIMAP',
                 ),
-                'd' => array(
-                    'name' => 'BackendCardDAV',
-                ),
-                'c' => array(
-                    'name' => 'BackendCalDAV',
-                ),
+                //'d' => array(
+                //    'name' => 'BackendCardDAV',
+                //),
+                //'c' => array(
+                //    'name' => 'BackendCalDAV',
+                //),
             ),
             'delimiter' => '/',
             //force one type of folder to one backend
@@ -63,18 +63,18 @@ class BackendCombinedConfig {
                 SYNC_FOLDER_TYPE_WASTEBASKET => 'i',
                 SYNC_FOLDER_TYPE_SENTMAIL => 'i',
                 SYNC_FOLDER_TYPE_OUTBOX => 'i',
-                SYNC_FOLDER_TYPE_TASK => 'c',
-                SYNC_FOLDER_TYPE_APPOINTMENT => 'c',
-                SYNC_FOLDER_TYPE_CONTACT => 'd',
-                SYNC_FOLDER_TYPE_NOTE => 'c',
-                SYNC_FOLDER_TYPE_JOURNAL => 'c',
+                //SYNC_FOLDER_TYPE_TASK => 'c',
+                //SYNC_FOLDER_TYPE_APPOINTMENT => 'c',
+                //SYNC_FOLDER_TYPE_CONTACT => 'd',
+                //SYNC_FOLDER_TYPE_NOTE => 'c',
+                //SYNC_FOLDER_TYPE_JOURNAL => 'c',
                 SYNC_FOLDER_TYPE_OTHER => 'i',
                 SYNC_FOLDER_TYPE_USER_MAIL => 'i',
-                SYNC_FOLDER_TYPE_USER_APPOINTMENT => 'c',
-                SYNC_FOLDER_TYPE_USER_CONTACT => 'd',
-                SYNC_FOLDER_TYPE_USER_TASK => 'c',
-                SYNC_FOLDER_TYPE_USER_JOURNAL => 'c',
-                SYNC_FOLDER_TYPE_USER_NOTE => 'c',
+                //SYNC_FOLDER_TYPE_USER_APPOINTMENT => 'c',
+                //SYNC_FOLDER_TYPE_USER_CONTACT => 'd',
+                //SYNC_FOLDER_TYPE_USER_TASK => 'c',
+                //SYNC_FOLDER_TYPE_USER_JOURNAL => 'c',
+                //SYNC_FOLDER_TYPE_USER_NOTE => 'c',
                 SYNC_FOLDER_TYPE_UNKNOWN => 'i',
             ),
             //creating a new folder in the root folder should create a folder in one backend
