--- a/roles/gitea/templates/etc_gitea_app_ini.j2
+++ b/roles/gitea/templates/etc_gitea_app_ini.j2
@@ -15,6 +15,8 @@ PROTOCOL = http
 DOMAIN = {{ gitea_domain }}
 HTTP_ADDR = 127.0.0.1
 HTTP_PORT = 3000
+LANDING_PAGE = explore
+ROOT_URL = https://{{ gitea_domain }}/
 
 [database]
 DB_TYPE = postgres
