Support custom 404 pages in blog

--- a/roles/blog/templates/etc_apache2_sites-available_blog.j2
+++ b/roles/blog/templates/etc_apache2_sites-available_blog.j2
@@ -20,4 +20,5 @@
     Options                 -Indexes
     HostnameLookups         Off
     php_admin_flag          engine On
+    ErrorDocument           404 /404.html
 </VirtualHost>
