--- a/roles/mailserver/templates/etc_rspamd_local.d_dmarc.conf.j2
+++ b/roles/mailserver/templates/etc_rspamd_local.d_dmarc.conf.j2
@@ -40,7 +40,7 @@ report_settings {
   # override_address = "postmaster@example.net";
 	
   # Send DMARC reports here in addition to domain owners
-  additional_address = "postmaster@{{ domain }}";
+  # additional_address = "postmaster@{{ domain }}";
 	
   # Number of records to request with HSCAN
   # hscan_count = 200
