Lots of updates, first test of VPN.

--- a/roles/vpn/templates/etc_dnsmasq.conf.j2
+++ b/roles/vpn/templates/etc_dnsmasq.conf.j2
@@ -94,7 +94,7 @@ bogus-priv
 # Or which to listen on by address (remember to include 127.0.0.1 if
 # you use this.)
 #listen-address=
-listen-address=127.0.0.1,10.8.0.1
+listen-address=127.0.0.1,{{ openvpn_ip_start }}.1
 
 # If you want dnsmasq to provide only DNS service on an interface,
 # configure it as shown above, and then use the following line to
