modified vpn role to allow routing to private net

--- a/roles/vpn/templates/etc_openvpn_server.conf.j2
+++ b/roles/vpn/templates/etc_openvpn_server.conf.j2
@@ -96,7 +96,26 @@ dh dh{{ openvpn_key_size }}.pem
 # Each client will be able to reach the server
 # on 10.8.0.1. Comment this line out if you are
 # ethernet bridging. See the man page for more info.
+
+{% if openvpn_enable_sub_routing == 1 %}
+
+mode server
+tls-server
+topology "subnet"
+push "topology subnet"
+
+ifconfig {{ openvpn_ip_start }}.1 255.255.255.0
+push "route-gateway {{ openvpn_ip_start }}.1"
+ifconfig-pool {{ openvpn_ip_start }}.50 {{ openvpn_ip_start }}.250 255.255.255.0
+
+client-config-dir /etc/openvpn/ccd
+route {{ openvpn_sub_routing_network }} 255.255.255.0
+
+{% else %}
+
 server {{ openvpn_ip_start }}.0 255.255.255.0
+
+{% endif %}
 
 # Maintain a record of client <-> virtual IP address
 # associations in this file.  If OpenVPN goes down or
@@ -188,7 +207,17 @@ ifconfig-pool-persist ipp.txt
 # or bridge the TUN/TAP interface to the internet
 # in order for this to work properly).
 push "redirect-gateway def1"
+
+
+{% if openvpn_enable_custom_dns == 1 %}
+
+push "dhcp-option DNS {{ openvpn_custom_dns }}"
+
+{% else %}
+
 push "dhcp-option DNS {{ openvpn_ip_start }}.1"
+
+{% endif %}
 
 # Certain Windows-specific network settings
 # can be pushed to clients, such as DNS
@@ -265,8 +294,8 @@ comp-lzo
 #
 # You can uncomment this out on
 # non-Windows systems.
-user nobody
-group nogroup
+#user nobody
+#group nogroup
 
 # The persist options will try to avoid
 # accessing certain resources on restart
