--- a/roles/iot/templates/etc_apache2_sites-available_grafana.j2
+++ b/roles/iot/templates/etc_apache2_sites-available_grafana.j2
@@ -1,11 +1,13 @@
 <VirtualHost *:80>
     ServerName {{ grafana_subdomain }}.{{ item.name }}
+    ServerAlias {{ grafana_subdomain }}
 
     Redirect temp / https://{{ grafana_subdomain }}.{{ item.name }}/
 </VirtualHost>
 
 <VirtualHost *:443>
     ServerName {{ grafana_subdomain }}.{{ item.name }}
+    ServerAlias {{ grafana_subdomain }}
 
     SSLEngine               On
     DocumentRoot            "{{ item.doc_root }}"
