update to official debian certbot package in debian 10, backport in 9. old method of installation is deprecated.

--- a/roles/sslletsencrypt/templates/etc_letsencrypt_cli.conf.j2
+++ b/roles/sslletsencrypt/templates/etc_letsencrypt_cli.conf.j2
@@ -6,3 +6,7 @@ keep = True
 expand = True
 agree-tos = True
 non-interactive = True
+
+# Because we are using logrotate for greater flexibility, disable the
+# internal certbot logrotation.
+max-log-backups = 0
