--- a/roles/sslletsencrypt/templates/root_letsencrypt_gencert.j2
+++ b/roles/sslletsencrypt/templates/root_letsencrypt_gencert.j2
@@ -1,11 +1,8 @@
 #!/bin/bash
 
-# Call script like this:
-# letsencrypt-gencert foo.com bar.com baz.com
-
 # Build list of domains and subdomains we need a certificate for
 d=""
-for domain in "$@"; do
+for domain in {{ virtual_domains | json_query('[*].name') | join(' ') }}; do
   # domain itself - foo.com
   # only add if the DNS entry for the domain does actually exist
   if (getent hosts $domain > /dev/null); then
@@ -17,8 +14,7 @@ for domain in "$@"; do
   fi
 
   # subdomains - www.foo.com mail.foo.com ...
-  # TODO includes servername (eddie / stage)!
-  for sub in stage www mail autoconfig stats news cloud git matrix status social comments iot wiki jitsi kanboard chat; do
+  for sub in {{ subdomains | join(' ') }}; do
     # only add if the DNS entry for the subdomain does actually exist
     if (getent hosts $sub.$domain > /dev/null); then
       if [ -z "$d" ]; then
