--- a/roles/blog/templates/etc_systemd_system_commento.j2
+++ b/roles/blog/templates/etc_systemd_system_commento.j2
@@ -18,7 +18,7 @@ Environment=COMMENTO_BIND_ADDRESS=127.0.0.1
 Environment=COMMENTO_SMTP_HOST={{ domain }}
 Environment=COMMENTO_SMTP_PORT=587
 Environment=COMMENTO_SMTP_USERNAME=noreply@{{ domain }}
-Environment=COMMENTO_SMTP_PASSWORD={{ lookup('password', secret + '/' + 'mail_noreply_password length=20') }}
+Environment=COMMENTO_SMTP_PASSWORD={{ lookup('password', secret + '/' + 'mail_noreply_password length=20 chars=ascii_lowercase,ascii_uppercase,digits') }}
 Environment=COMMENTO_SMTP_FROM_ADDRESS=noreply@{{ domain }}
 Environment=COMMENTO_FORBID_NEW_OWNERS=false
 
