--- a/roles/blog/templates/home_user_fathom-stats_env.j2
+++ b/roles/blog/templates/home_user_fathom-stats_env.j2
@@ -2,7 +2,7 @@ FATHOM_SERVER_ADDR={{ fathom_internal_port }}
 FATHOM_GZIP=true
 FATHOM_DEBUG=false
 FATHOM_DATABASE_DRIVER="postgres"
-FATHOM_DATABASE_SSLMODE="require"
+FATHOM_DATABASE_SSLMODE="disable"
 FATHOM_DATABASE_NAME="{{ fathom_db_database }}"
 FATHOM_DATABASE_USER="{{ fathom_db_username }}"
 FATHOM_DATABASE_PASSWORD="{{ fathom_db_password }}"
