add lights-web to iot role

--- a/roles/iot/templates/etc_apache2_sites-available_grafana.j2
+++ b/roles/iot/templates/etc_apache2_sites-available_grafana.j2
@@ -23,6 +23,9 @@
     Alias                   /mqtt /var/www/mqtt-admin
     ProxyPassMatch          ^/mqtt !
 
+    Alias                   /lights /var/www/lights-web/lights
+    ProxyPassMatch          ^/lights !
+
     ProxyRequests           Off
     ProxyPreserveHost       On
 
